Changes done: - Added complaint feature where the student can create a complaint and the admin can resolve it. - admin_bp.py, complaint_bp.py have the blue print for the complaints. - Added admin_complaints.html, admin_resolved_complaints.html, create_complaint.html - base.html was updated - auth_decorators.py now has an authenticator for student - Styles.css now has .wrap-text

--- a/static/styles.css
+++ b/static/styles.css
@@ -20,6 +20,13 @@
     flex-direction: column;
     min-height: 100vh;
   }
+
+  .wrap-text {
+    white-space: pre-wrap;
+    word-wrap: break-word;
+    max-width: 900px;
+  }
+
   
   /* Container */
   .container {
